[Views] Draw an arrow for location bar bubbles on Mac, pre Material

On Views, there is no arrow draw if the bubble shows up on a user
gesture. For consistency, an arrow is now drawn on Mac, pre Material
Design.

Bug: 793077
Test: visual
Change-Id: Ic73856c6b07cdc3b5821fec918d44cd458847d04
Reviewed-on: https://chromium-review.googlesource.com/818154
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523096}
Former-commit-id: d95b081ed90927fc0a82cea5e396555dcae62119